--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Oswald", sans-serif;
-  background-image: linear-gradient(to bottom, #d59254, #cf7693);
+  background-color: #E8CEBF;
 }
 
 a {
