--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Oswald", sans-serif;
+  font-family: Calibri, Helvetica, Arial, sans-serif !important;
   background-color: #E8CEBF;
 }
 
